styles for mobiles and tablets predefined codes

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 <picture>
                     <img src="./assets/cli.png" alt="install">
                 </picture>
-                <div class="install-desc-1">
+                <div class="stats-install-desc">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
                 </div>
-                <div class="install-desc-2">
+                <div class="stats-install-desc">
                     <p>Lorem, ipsum dolor.</p>
                 </div>
             </section>
