cloud section added

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
             </section>
         </article>
         <!----------x--------- stats section ---------x---------->
+        <!------------------- cloud section ------------------->
+        <article class="cloud">
+            <section class="cloud-content">
+                <h2 class="cloud-content-head">Lorem ipsum dolor sit.</h2>
+                <p class="cloud-content-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium cum laborum omnis quibusdam eius asperiores sit voluptas dicta quod incidunt.</p>
+                <button class="cloud-content-btn">read more</button>
+            </section>
+            <picture>
+                <img src="./assets/cloud.png" alt="cloud">
+            </picture>
+        </article>
+        <!----------x--------- cloud section ---------x---------->
     </main>
 
 
