lang section added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,46 @@
             </picture>
         </article>
         <!----------x--------- cloud section ---------x---------->
+        <!------------------- lang section ------------------->
+        <section class="lang">
+            <h2 class="lang-head">Lorem ipsum dolor sit.</h2>
+            <section class="lang-box">
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/scala.png" alt="scala">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/csharp.png" alt="scala">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/clojure.png" alt="scala">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/ruby.png" alt="ruby">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/python.png" alt="python">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/php.png" alt="php">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/node.png" alt="node">
+            </div>
+            <div class="lang-box-card">
+                <h3 class="lang-box-card-head">Lorem, ipsum.</h3>
+                <img src="./assets/logos/go.png" alt="go">
+            </div>
+           
+        </section>
+        </section>
+        <!----------x--------- lang section ---------x---------->
     </main>
 
 
