--- a/index.html
+++ b/index.html
@@ -137,8 +137,27 @@
         </section>
         <!----------x--------- lang section ---------x---------->
     </main>
-
-
+      <!------------------- footer ------------------->
+      <footer>
+          <section class="footer-logo">
+                <h1><a href="index.html">Loruki</a></h1>         
+            <p class="footer-logo-copyright">
+                Copyright &copy; 2022
+            </p>
+          </section>
+          <ul class="footer-menu">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="docs.html">Docs</a></li>
+              <li><a href="featurs.html">Features</a></li>
+          </ul>
+          <div class="footer-social">
+            <a href="#"><i class="fab fa-github fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          </div>
+      </footer>
+      <!----------x--------- footer ---------x---------->
     <!--  js file -->
     <script src="./js/index.js"></script>
 </body>
